@@ -13,6 +13,7 @@ modules = \
         psana_examples.DumpCamera \
         psana_examples.DumpControl \
         psana_examples.DumpCsPad \
+        psana_examples.DumpCsPad2x2 \
         psana_examples.DumpEncoder \
 #        psana_examples.DumpEpics \
         psana_examples.DumpEvr \
@@ -48,6 +49,9 @@ source = ProcInfo()
 
 [psana_examples.DumpCsPad]
 source = :Cspad
+
+[psana_examples.DumpCsPad2x2]
+source = :Cspad2x2
 
 [psana_examples.DumpEncoder]
 source = :Encoder
