@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-03
+2012-02-06 Andy Salnikov
+- add new module DumpCsPad2x2 which dumps all cspad2x2 classes
+- removed MiniElementV1 from DumpCsPad
+
 Tag: V00-02-02
 2012-01-20 Andy Salnikov
 - more details printed in DumpControl module
